==> Linoo0/sentry/rtos_sentry/rtos_sentry/referee/referee.c <==
#include "referee.h"
#include "usart.h"
#define    COM5_PACKAGE_HEADER       JUDGE_FRAME_HEADER

void USART1_SendChar(uint8_t cData)
{
	HAL_UART_Transmit( &huart1, &cData,1,0xffff );
}
